# brag-server

./: .dockerignore  .editorconfig  .env  .gitignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile-brag-server  Dockerfile-curl  Dockerfile-load_db  Makefile  README.md  brag-server.toml  compose.yaml  curl  run
Docker/: .dockerignore  compose.yaml  entrypoint.sh
Docker/Dockerfiles/brag-server/: Dockerfile
Docker/Dockerfiles/load_db/: Dockerfile
envs/: db.env  env.env
migrations/: 20231123183414_init.sql  20231127223145_init.down.sql  20231127223145_init.up.sql  init.sql
ripi/: README.md  RIPISSUE.md
ripi/.closed/Issue/ nginx proxy manager/: description.md
ripi/.closed/Issue/command_to_clone_repository/: description.md
ripi/.closed/Issue/docker_compose_service_rust_app/: description.md
ripi/.closed/Issue/implement_makefile_and_deploy_steps/: description.md
ripi/Issue/ nginx proxy manager/: description.md
ripi/Issue/command_to_clone_repository/: description.md
ripi/Issue/deploy_build_scripts/: description.md
ripi/Issue/deploy_with_systemd_units/: description.md
ripi/Issue/implement_api_endpoints/: description.md
ripi/Issue/implement_makefile_and_deploy_steps/: description.md
ripi/Issue/initial_rust_project_setup_and_basic_axum/: description.md
ripi/Issue/periodically_update_repos_and_db/: description.md
ripi/Issue/save_everything_in_db/: description.md
ripi/Issue/setup_axum_structure/: description.md
ripi/Issue/setup_basic_axum_db_structure/: description.md
samples/: api-response.json  brag-server.toml  commit-json.json  github-repos-response.json  gitlab-repos-response.json
scripts/: brag-server  brag-server_entrypoint.sh  commit-json  curl  curl_entrypoint.sh  dclean  dcompose  deploy  deploy.sh  dev.sh  dprune  env.sh  env_vars.sh  git-log-json.sh  git_log.sh  install_asdf.sh  install_asdf_runner.sh  install_sqlx.sh  load_db  load_db_entrypoint.sh  migrate  prod.sh  run  run_brag_server.sh  setup  setup_initial.sh  start_all_docker.sh  utils.sh  watch
scripts/start/: start_brag_server.sh  start_db.sh  start_load_db.sh
src/: lib.rs  main.rs
src/datetime_deserializer/: mod.rs
src/global_vars/: mod.rs
src/handlers/: get.rs  mid_filters.rs  mod.rs
src/queries/: mod.rs
src/types/: commits.rs  config_toml.rs  git_hosts.rs  mod.rs  repositories.rs
src/utils/: mod.rs
units/: brag-server.service  brag-server@.service  load_db.service  load_db@.service  spin_db.service
(+3 files in other folders)
